# sah

./: .copier-answers.yml  .gitignore  CLAUDE.md  README.md  final-results-clean.jsonl  jobs.txt  missing-jobs.txt  pyproject.toml
.github/: launch_actions_runner.sh
notebooks/: 001-check-finetuned-model.py  002-generate-plots-entropies.py  003-check-activation-distribution.py  004-plot-output-centric-metrics.py  008-plot-corr-metric.py  010-plot-bayesian-info.py  011-model-weight-diff.py  012-compress-by-gradients.py  014-weight-diff-percentiles.py  015-first-layer-gradient-targeting.py  016-synthetic-tesla-test.py  018-dataset-iteration-idea.py  019-test-outputs-finetuned.py  020-check-synthetic-data.py  021-check-weight-diff-alignment.py  023-plot-results.py  026-plot-pareto-curves.py  027-llm-compressing-hypothesis.py  028-plot-pareto-curves-checkpoints.py  029-base-pareto-curves-plots.py  030-checkpoint-pareto-curves.py  031-checkpoint-pareto-diffs.py  032-debug-it-evals.py  033-course-project-slides-plots.py  034-verify-job-completeness.py  035-verify-checkpoint-completeness.py  036-unified-method-plots.py  037-prune-ifeval-responses.py  038-lm-head-plot.py  039-unified-view-plots.py  040-blora-plot.py  041-pareto-curves-by-view.py  042-pareto-estimation-plots.py  043-pareto-curves-references-plots.py  044-checkpoint-diffs.py  045-task-complexity-reduction-plots.py  046-task-complexity-curves.py
sah/: __init__.py  conftest.py  experiment.py  main.py  main_test.py
scripts/: aggregate_it_data.py  baseline_inference.py  batch_inference.py  blora_inference.py  clean_jsonl.py  evaluate_ifeval_runs.py  evaluate_lima_runs.py  filter_blora_duplicates.py  filter_final_runs.py  generate_it_data.py  if_functions.py  inference.py  lora_inference.py  merge_results.py  sync_results_from_cluster.sh
slurm/: PARALLEL_JOBS_README.md  alpaca.yaml  approximate-entropy-automata-variations.sh  automatas-entropies.sh  compute-mask.sh  distil-math.sh  distil.sh  estimate-entropy.sh  evaluate-entropy-automata-variations.sh  evaluate-ifeval.sh  finetune-with-strategy.sh  finetune.sh  gather-activations.sh  gather-grammar-activations.sh  generate-automata-variations.sh  generate-grammar-sequence.sh  generate-grammar.sh  generate-it-data.sh  generate-job-list.sh  grammar-entropy-bottleneck.sh  grammar-entropy.sh  pretrain-then-finetune.sh  run-experiment.sh  run-notebook.sh  run-single-job.sh  schedule-tamia-jobs.sh  submit-all-experiments.sh  submit-checkpoint-experiments.sh  submit-pretraining-experiments.sh  train-on-grammar.sh  train-with-strategy.sh
(+266 files in other folders)
